--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       <h2 class="subtitle">Gastos locales</h2>
       <div id="localCharges" class="local"></div>
     </section>
+
+    <section class="card">
+  <h2 class="subtitle">Remarks</h2>
+  <div id="remarksSection"></div>
+</section>
   </main>
 
   <script src="app.js"></script>
